--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>Employee</finalName>
+		<finalName>employee</finalName>
 	</build>
 
 
