--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=EmployeeMangagementProject
-spring.datasource.url=jdbc:mysql://localhost:3306/Employee?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/Employee?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
